--- a/spec/config/mongoid.yml
+++ b/spec/config/mongoid.yml
@@ -3,4 +3,4 @@ development:
     default:
       database: mongoid_favoriteable
       hosts:
-        - localhost:17017
+        - localhost:<%= ENV.fetch('BOXEN_MONGODB_PORT', 27017) %>
